--- a/.github/workflows/publishing_workflow.yaml
+++ b/.github/workflows/publishing_workflow.yaml
@@ -1,11 +1,18 @@
 name: Deploy Countries Pad
 on:
    workflow_dispatch:
+   
+# Job 1 - Build Signed AAB
 
 jobs:
    build:
+      name: Job 1 - Build Signed AAB
       runs-on: ubuntu-latest
       steps:
+      
+      
+         # Step 1 - Read Keystore from GitHub Secrets, decrypt from base64 string and
+         # avail it to the workflow - put it in a temporary folder
          - name: Decode Keystore
            env:
               ENCODED_STRING: ${{ secrets.KEYSTORE }}
@@ -16,32 +23,39 @@ jobs:
             
               echo $ENCODED_STRING | base64 -di > "${TMP_KEYSTORE_FILE_PATH}"/your_keystore_file.jks
               
+          # Step 2 - Checkout the repository, making it available to the workflow:
          - uses: actions/checkout@v3
          
+         # Step 3 - Setup Java
          - name: Setup JDK 18
            uses: actions/setup-java@v3
            with:
               distribution: temurin
               java-version: 18
-              
+          
+          # Step 4 - Setup Gradle to allow workflow access the gradlew file/ grant execution permission
          - name: Make gradlew executable
            run: chmod +x ./gradlew
-           
+         
+         # Step 5 - Setup Gradle cache to improve the speed of the workflows
          - name: Setup Gradle Cache
            uses: gradle/gradle-build-action@v2
            with:
               gradle-home-cache-cleanup: true
               
+         # Override the version code and version name
          - name: Bump Version Code
            uses: chkfung/android-version-actions@v1.2.1
            with:
               gradlePath: app/build.gradle.kts
               versionCode: ${{ github.run_number }}
               versionName: 1.0.0
-              
+          
+          # Build App Bundle
          - name: Build prodRelease
            run: ./gradlew bundleRelease
          
+         # Sign AAB
          - name: Sign AAb
            id: sign
            uses: r0adkll/sign-android-release@v1
@@ -52,8 +66,10 @@ jobs:
               keyStorePassword: ${{ secrets.SIGNING_STORE_PASSWORD }}
               keyPassword: ${{ secrets.SIGNING_KEY_PASSWORD }}
               
+          # Print out the Job Status
          - run: echo "Build status report=${{ job.status }}."
          
+         # Save AAB after Build job is complete to publish it as a Github release in the next job
          -  name: Upload app bundle as artifact
             uses: actions/upload-artifact@v2
             with:
@@ -62,7 +78,7 @@ jobs:
          
     
         
-   
+   # Job 2 - Deploy to Playstore
    deploy:
       needs: build
       runs-on: ubuntu-latest
@@ -72,7 +88,8 @@ jobs:
            uses: actions/download-artifact@v2
            with:
               name: app-bundle
-              
+          
+          # Uploads the AAB to play console
          - name: Publish to Play Store
            uses: r0adkll/upload-google-play@v1
            with:
